[tool.poetry]
name = "data-validator"
version = "0.1.0"
description = ""
authors = ["lucas.felicio <lucasfeliccio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
selenium = "^4.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
