[tool.poetry]
name = "data-validator"
version = "0.1.0"
description = ""
authors = ["lucas.felicio <lucasfeliccio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.9.7 || >3.9.7,<4.0"
selenium = "^4.18.0"
pytest = "^8.0.1"
streamlit = "^1.31.1"


[tool.poetry.group.dev.dependencies]
taskipy = "^1.12.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = "lsof -ti :8501 | xargs kill -9 | streamlit run src/app.py"
